Switched to OpenAPI 3 (swagger 3)
